<resources>
    <string name="app_name">smartcity</string>
    <string name="logIn">Log in</string>
    <string name="signIn">Sign in</string>
    <string name="password">Password :</string>
    <string name="email">"Mail adress : "</string>
    <string name="welcome">Welcome</string>
    <string name="accountExist">you alreday have an account ?</string>
    <string name="accountNew">first time ?</string>
    <string name="name">Name :</string>
    <string name="first_name">First name :</string>
    <string name="sex">"Sex : "</string>
    <string name="man">Man</string>
    <string name="woman">"Woman "</string>
    <string name="other">"Other "</string>
    <string name="adress">"Adress : "</string>
    <string name="road">"Road : "</string>
    <string name="number">"Number : "</string>
    <string name="zip">"Zip : "</string>
    <string name="locality">"Locality : "</string>
    <string name="phone">"Phone number : "</string>
    <string name="birthdate">Birthday :</string>
    <string name="id_number">ID-Number :</string>
    <string name="cancel">CANCEL</string>
    <string name="search_job_offer">Search a job offer</string>
    <string name="my_schedule">My schedule</string>
    <string name="edit_profile">Edit profile</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="disconnect">Disconnect</string>
    <string name="accept_offer">Accept offer</string>
    <string name="tags" translatable="false">Tags :</string>
    <string name="user_saved" translatable="false">user_saved</string>
    <string name="mail_default" translatable="false">mailDefault</string>
    <string name="file_user" translatable="false">file_user_smartcity</string>
    <string name="date_start">"date start : "</string>
    <string name="date_end">"date end : "</string>
    <string name="user" translatable="false">user</string>
    <string name="mail_regex" translatable="false">^[\\\\w-_\\\\.+]*[\\\\w-_\\\\.]\\\\@([\\\\w]+\\\\.)+[\\\\w]+[\\\\w]$</string>
    <string name="password_regex" translatable="false">^.*(?=.{8,})(?=..*[0-9])(?=.*[a-z])(?=.*[A-Z]).*$</string>
    <string name="mail_error">email unvalidable</string>
    <string name="password_error">unvalidable password</string>
    <string name="annonce" translatable="false">annonce</string>
    <string name="tiret" translatable="false">-</string>
    <string name="uri_map" translatable="false">geo:0,0?q=</string>
    <string name="map_intent" translatable="false">com.google.android.apps.maps</string>
    <string name="void_string" translatable="false">\"\"</string>
    <string name="tags_transfer" translatable="false">tags</string>
    <string name="Login_error">error login request invalide</string>
    <string name="accessApiError">error access Api</string>
    <string name="connection_error">internet error</string>
    <string name="etudiant_error">userEtudiant does not exist</string>
    <string name="annonce_error">annonce does not exist</string>
    <string name="tag_errors">It looks you don\'t have any tag go to edit to avoid this message</string>
    <string name="accessToken" translatable="false">accessToken</string>
    <string name="year" translatable="false">year</string>
    <string name="month" translatable="false">month</string>
    <string name="dayOfMonth" translatable="false">dayOfMonth</string>
    <string name="hourOfDay" translatable="false">hourOfDay</string>
    <string name="minute" translatable="false">minute</string>
    <string name="recherche_error">not result found</string>
    <string name="emploieDuTemp_error">your schedule is void</string>
    <string name="inscription_error">inscription error</string>
    <string name="deja_postule">already postul</string>
    <string name="moreinfo">more infos</string>
    <string name="PasswordPrevious">Previous password :</string>
    <string name="next">Next</string>
    <string name="prec" translatable="false">Precedent</string>
    <string name="title_activity_postulation" translatable="false">PostulationActivity</string>
    <string name="cancelPost">Cancel Postulation</string>
    <string name="postulation" translatable="false">postulation</string>
    <string name="notFound">not found</string>
    <string name="serverError">server error</string>
    <string name="errorAuthorization">authorization error</string>
    <string name="forbiden">acces denied</string>
    <string name="internetError">internet error</string>
    <string name="mailAlredyUsed">The mail adress is already used</string>
    <string name="positiveLineNumber">Line number must be positive</string>
    <string name="localityError">Locality does not exist</string>
    <string name="mailPasswordError">Wrong mail adress or password</string>
    <string name="postulationExist">You have already apply for this annonce</string>
    <string name="tagLess">Student without tag</string>
    <string name="sexError">Sex does not exist</string>
    <string name="ageError">You must be major</string>
    <string name="AnnoncePast">Annonce can\'t be in the past</string>
    <string name="dateError">Begin date must be before end date</string>
    <string name="premuim">Only premuim entreprise can post urgent annonce</string>
    <string name="yes">Yes</string>
    <string name="IsAccepted">"Is accepted : "</string>
    <string name="no">No</string>
    <string name="poste">"Post : "</string>
    <string name="paie">"Pay : "</string>
    <string name="nomEntreprise">"Company name : "</string>
    <string name="nomResponsable">"Contact Name : "</string>
    <string name="error_empty">Can\'t be empty</string>
    <string name="error_matche_postalcode">This is not a zip code</string>
    <string name="error_phone_matche">Invalid phone number</string>
    <string name="error_matche_email">This is not an email adress</string>
    <string name="register_confirm_pass_matche">You need to put the same password</string>
    <string name="error_matche_birthdate">Date format : DD/MM/YYYY</string>
    <string name="confirmPassword">"Confirm password : "</string>
    <string name="SignUp">Sign Up</string>
    <string name="futurBirth">You need to be born</string>
    <string name="error_matche_id">This is not an id (ex : 11.11.11-111.11)</string>
    <string name="chooseLanguage">Choose your languages</string>
    <string name="chooseSector">Choose your sector of activity</string>
    <string name="changePassword">Change Password</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="newPasswordError">New password must be different of the old one</string>
    <string name="areYouSure">Are tou sure you want to delete your account ? This action cannot be reverse</string>
    <string name="invalidName">Invalid Name</string>
    <string name="invalidNumber">Invalid number</string>
</resources>
