<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RechercheAnnonceActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/search_job_offer"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_start" />

            <EditText
                android:id="@+id/dateDebut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                app:layout_constraintBottom_toTopOf="@+id/dateFin" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_end" />

            <EditText
                android:id="@+id/dateFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

            <Button
                android:id="@+id/search"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="279dp"
                android:layout_marginEnd="44dp"
                android:text="@string/search_job_offer" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>